Fix layout issues with contact page on mobile

--- a/assets/css/_sass/_pages/_contact.scss
+++ b/assets/css/_sass/_pages/_contact.scss
@@ -42,6 +42,9 @@
 	@media screen and (min-width: 900px) {
 		margin: 1.5rem 0;
 	}
+	@media screen and (max-width: 450px) {
+		padding: 1rem;
+	}
 
 }
 
@@ -71,6 +74,11 @@
 		transition: .3s color;
 		&:hover, &:focus {
 			color: black;
+		}
+	}
+	@media screen and (max-width: 424px) {
+		span {
+			display: none;
 		}
 	}
 }
